--- a/components/pagination/variables.styl
+++ b/components/pagination/variables.styl
@@ -5,6 +5,7 @@ $pagination-gutter := unit(20 / $rem, rem)
 
 $pagination-btn-border-radius := $border-radius
 $pagination-btn-margin-right := unit(10 / $rem, rem)
+$pagination-btn-padding := 0 unit(3 / $rem, rem)
 
 // size
 $pagination-large-font-size := $large-font-size
